Fri Oct 16 08:51:19 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_doxygen.pl:
        * htlm/index.html:
          Added dds4ccm

Fri Oct 16 06:38:19 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/run_test.lst:
          Run Enum_Interfaces_Test, MT_SOCK_Test, TP_Reactor_Test on LynxOS.

Fri Oct 16 06:00:42 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_stdio.h:
        * ace/OS_NS_stdio.inl:
          Readded "Tue Oct 13 19:13:13 UTC 2009  Olli Savia  <ops@iki.fi>"
          without os_unistd.h modifications.

Thu Oct 15 17:33:05 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/OS_NS_stdio.h:
        * ace/OS_NS_stdio.inl:
        * ace/os_include/os_unistd.h:

          Reverted Tue Oct 13 19:13:13 UTC 2009  Olli Savia  <ops@iki.fi>,
          it broke the IDL compiler.

Thu Oct 15 11:26:15 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/Pipe.cpp:
          It OK to use socketpair to implement pipe on LynxOS.

Thu Oct 15 11:11:48 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Basic_Types.h:
          Fix for 64bit PPC

Thu Oct 15 07:43:48 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3744_Regression_Test.cpp:
        * tests/tests.mpc:
        * tests/run_test.lst:
          Moved the regression for 3744 to its own file, we don't have a fix yet

Wed Oct 14 23:15:59 UTC 2009  Abdul Sowayan  <sowayan@gmail.com>

        * ace/config-macosx-snowleopard.h:
        * include/makeinclude/platform_macosx_snowleopard.GNU:

          First cut of adding snowleopard support.

Wed Oct 14 14:43:01 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-lynxos.h:
          Added/removed some defines.

Wed Oct 14 14:41:03 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_signal.h:
          Added include "ace/os_include/os_pthread.h" since LynxOS defines
          pthread_sigmask() in pthread.h.

Tue Oct 13 19:13:13 UTC 2009  Olli Savia  <ops@iki.fi>
